New working shiro CAS configuration. The old configuration is partly deprecated

--- a/src/main/resources/static/protected/index.html
+++ b/src/main/resources/static/protected/index.html
@@ -54,7 +54,7 @@
             <p>Understanding the studies</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-            <a href="https://localhost:8443/atlas" target="_blank">
+            <a href="https://localhost:8443/WebAPI/user/oauth/cas" target="_blank">
                 <img class="rounded-circle img-fluid d-block mx-auto" src="/img/atlas.png" alt="atlas">
             </a>
             <h3>
