Cleanup + improved portal navigation + all URL's in application.properties

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -78,7 +78,7 @@
                     </ul>
                 </li-->
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="/protected/index.html">Portal</a></li>
+                <li><a href="/portal">Portal</a></li>
             </ul>
             <!-- /Main navigation -->
 
@@ -97,7 +97,7 @@
                         <h1 class="white-text">HONEUR</h1>
                         <h3 class="white-text">Haematology Outcomes Network Europe</h3>
                         <p class="white-text">
-                            Hello <span th:text="${username}"></span>!
+                            Welcome!
                         </p>
                         <!--button class="white-btn">Get Started!</button>
                         <button class="main-btn">Learn more</button-->
