User Management: * replace metal look and feel by bootstrap look and feel * bug fixes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -305,8 +305,71 @@
                         </div>
                     </div>
                     <div class="team-content">
+                        <h3>Barbara Millier</h3>
+                        <span>Project Manager</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /team -->
+
+            <!-- team -->
+            <div class="col-sm-4">
+                <div class="team">
+                    <div class="team-img">
+                        <!--img class="img-responsive" src="./img/team2.jpg" alt=""-->
+                        <div class="overlay">
+                            <div class="team-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-content">
                         <h3>Lars Halvorsen</h3>
-                        <span>It Architect</span>
+                        <span>IT Architect</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /team -->
+
+            <!-- team -->
+            <div class="col-sm-4">
+                <div class="team">
+                    <div class="team-img">
+                        <!--img class="img-responsive" src="./img/team2.jpg" alt=""-->
+                        <div class="overlay">
+                            <div class="team-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-content">
+                        <h3>Maria d'Errico</h3>
+                        <span>Data Scientist</span>
+                    </div>
+                </div>
+            </div>
+            <!-- /team -->
+
+            <!-- team -->
+            <div class="col-sm-4">
+                <div class="team">
+                    <div class="team-img">
+                        <!--img class="img-responsive" src="./img/team2.jpg" alt=""-->
+                        <div class="overlay">
+                            <div class="team-social">
+                                <a href="#"><i class="fa fa-facebook"></i></a>
+                                <a href="#"><i class="fa fa-google-plus"></i></a>
+                                <a href="#"><i class="fa fa-twitter"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="team-content">
+                        <h3>Alun Passey</h3>
+                        <span>Data Scientist</span>
                     </div>
                 </div>
             </div>
@@ -327,7 +390,7 @@
                     </div>
                     <div class="team-content">
                         <h3>Continuum Consulting</h3>
-                        <span>Software crafters</span>
+                        <span>Software Crafters</span>
                     </div>
                 </div>
             </div>
@@ -440,7 +503,8 @@
 
                 <!-- footer copyright -->
                 <div class="footer-copyright">
-                    <p>Copyright © 2017. All Rights Reserved. Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p>
+                    <p>Copyright © 2017. All Rights Reserved.</p>
+                    <!--p>Designed by <a href="https://colorlib.com" target="_blank">Colorlib</a></p-->
                 </div>
                 <!-- /footer copyright -->
 
